Updated readme and package.json

--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
   "name": "log4js-k8s",
   "version": "0.9.0",
+  "homepage": "https://github.com/mike-treadway/log4js-k8s",
   "description": "Log4js appender that logs output in a standard JSON format to stdout for Kubernetes based deployments.",
-  "main": "lib/index.js",
+  "main": "./lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "engines": {
+    "node": ">=6.0"
+  },
+  "keywords": [
+    "logging",
+    "log",
+    "log4j",
+    "node"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mike-treadway/log4js-k8s.git"
+  },
+  "author": "Mike Treadway",
   "license": "ISC"
 }
